v1/readme.md
#Tweet

##Requriements:
1.Nodejs,NPM
2.install all packages listed in package.jason using "npm install <packagename> --save"
3.MongoDB:
	install and run MongoDB.
	Use below link to setup and run:
	https://docs.mongodb.com/manual/tutorial/install-mongodb-on-ubuntu/

##Start:
1. if using a local server replace the following line of code in app.js 
	app.listen(process.env.PORT, process.env.IP, function(){
	   console.log("The tweet Server Has Started!");
	});
	with
	app.listen(3000, function(){
	   console.log("The tweet Server Has Started!");
	});

2. start the application using
	node app.js






##Version Details
##__--------------V1__---------------

Add Landing Page
Add Tweets Page that lists all tweets
Each Tweet has:

Name
Str
#Layout and Basic Styling

Create our header and footer partials
Add in Bootstrap
#Creating New Tweets

Setup new tweet POST route
Add in body-parser
Setup route to show form
Add basic unstyled form
#Style the tweets page

Add a better header/title
Make tweets display 
#Style the Navbar and Form

Add a navbar to all templates
Style the new tweet subbmition form
